fixed body width on iPhone

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -250,6 +250,12 @@ div.navbar {
 
 @import "twitter/bootstrap/responsive";
 
+@media (max-width: 480px) {
+body { width:700px;
+}
+	
+}
+
 // Set the correct sprite paths
 @iconSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings.png');
 @iconWhiteSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings-white.png');
